# sylpheed

./: ChangeLog  ChangeLog.ja  INSTALL  INSTALL.ja  Makefile.am  NEWS  README  README.ja  TODO  aclocal.m4  config.h.in  configure.in  imap.c
ac/: Makefile.am
doc/: Makefile.am  README.ja  account.txt  base64.txt  checklist.txt  codeconv.txt  compose.txt  customheader.txt  displayheader.txt  filter.txt  folder.txt  html.txt  imap.txt  mbox.txt  md5.txt  md5_hmac.txt  mh.txt  news.txt  nntp.txt  pop.txt  prefs.txt  prefs_account.txt  prefs_common.txt  procheader.txt  procmime.txt  procmsg.txt  quoted-printable.txt  recv.txt  session.txt  smtp.txt  socket.txt  ssl.txt  stringtable.txt  sylmain.txt  tmpl.txt  unmime.txt  utils.txt  uuencode.txt  virtual.txt  xml.txt
examples/: Makefile.am  README  README.ja  libsylph-compose.c  libsylph-createmailbox.c  libsylph-listfolder.c  libsylph-listprefs.c  libsylph-listsummary.c  libsylph-pop.c  libsylph-send.c  libsylph-template.c
libsylph/: Makefile.am  account.h  compose.c  compose.h  imap.c  procmime.c  procmsg.c  sylmain.c  sylmain.h  utils.c
macosx/bundle/: Info-sylpheed.plist
nsis/: sylpheed-defs.nsh
po/: ChangeLog  POTFILES.in  be.po  bg.po  cs.po  da.po  de.po  el.po  es.po  et.po  eu.po  fi.po  fr.po  gl.po  hr.po  hu.po  it.po  ja.po  ko.po  libsylph.pot  lt.po  nl.po  pl.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sr.po  sv.po  tr.po  uk.po  vi.po  zh_CN.po  zh_TW.Big5.po  zh_TW.po
src/: codeconv.c  compose.c  folderview.c  imap.c  ldif.c  main.c  mainwindow.c  mainwindow.h  mimeview.c  prefs_filter.c  procheader.c  procmsg.c  recv.c  recv.h  rpop3.c  summaryview.c  template.c  textview.c  update_check.c  utils.c  utils.h
