EXTRA_DIST = README.ja \
	account.txt \
	base64.txt \
	codeconv.txt \
	compose.txt \
	customheader.txt \
	displayheader.txt \
	filter.txt \
	folder.txt \
	html.txt \
	imap.txt \
	mbox.txt \
	md5.txt \
	md5_hmac.txt \
	mh.txt \
	news.txt \
	nntp.txt \
	pop.txt \
	prefs.txt \
	prefs_account.txt \
	prefs_common.txt \
	procheader.txt \
	procmime.txt \
	procmsg.txt \
	quoted-printable.txt \
	recv.txt \
	session.txt \
	smtp.txt \
	socket.txt \
	ssl.txt \
	stringtable.txt \
	sylmain.txt \
	tmpl.txt \
	unmime.txt \
	utils.txt \
	uuencode.txt \
	virtual.txt \
	xml.txt
